Finished implementation of Map, MapLoader and MapDriver for A1.

--- a/COMP345---RISK.vcxproj
+++ b/COMP345---RISK.vcxproj
@@ -22,6 +22,8 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <ProjectGuid>{57B9E6CF-F2A9-4D67-82C5-2E84EE0D43A2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
+    <TargetFrameworkVersion>
+    </TargetFrameworkVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -88,6 +90,7 @@
     <ClCompile>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <WarningLevel>Level3</WarningLevel>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
